--- a/style.css
+++ b/style.css
@@ -7,9 +7,11 @@
 body{
     height: 100vh;
     background: linear-gradient(to bottom, #283c86, #45a247);
+    position: relative;
     display: grid;
     align-items: center;
     justify-content: center;
+
 }
 
 .card{
@@ -22,6 +24,7 @@ body{
     text-align: center;
     border-radius: 25px;
     box-shadow: 8px 10px 10px rgba(0, 0, 0, 0.5);
+    z-index: 5;
 }
 
 h1{
@@ -52,5 +55,53 @@ h4{
     font-weight: 500;
     word-spacing: 1px;
     letter-spacing: 0.2px;
+}
+
+.another-card1{
+    background:  linear-gradient(to top, #8360c3, #2ebf91);
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 130px;
+    left: 250px;
+    box-shadow: 8px 10px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 100% 0% 100% 0% / 100% 0% 100% 0% ;
+    z-index: 6;
+}
+
+.another-card2{
+    background:  linear-gradient(to top, #8360c3, #2ebf91);
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 130px;
+    right: 250px;
+    box-shadow: 8px 10px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 0% 100% 0% 100% / 0% 100% 0% 100% ;
+    z-index: 7;
+}
+
+.another-card3{
+    background:  linear-gradient(to top, #8360c3, #2ebf91);
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    bottom: 130px;
+    left: 250px;
+    box-shadow: 8px 10px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 0% 100% 0% 100% / 0% 100% 0% 100% ;
+    z-index: 8;
+}
+
+.another-card4{
+    background:  linear-gradient(to top, #8360c3, #2ebf91);
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    bottom: 130px;
+    right: 250px;
+    box-shadow: 8px 10px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 100% 0% 100% 0% / 100% 0% 100% 0% ;
+    z-index: 9;
 }
 
