--- a/style.css
+++ b/style.css
@@ -186,4 +186,45 @@ button, a{
     background-color: #29a9fd;
 }
 
+.contact-section{
+    position: relative;
+}
+
+.contact-section .common-title{
+    padding-top: 4rem;
+}
+
+.custom-shape-divider-top-1708428231 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1708428231 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 150px;
+}
+
+.custom-shape-divider-top-1708428231 .shape-fill {
+    fill: #FFFFFF;
+}
+
+.contact-section .form-section{
+    width: 50%;
+}
+
+.main-footer-section{
+    padding: 0 0 4rem 0;
+    color: #fff;
+}
+
+.contact-div{
+    background-color: #222;
+}
+
 
